--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,34 @@
-<ion-header>
-  <ion-navbar>
-    <ion-title>
-      Ionic Blank
-    </ion-title>
-  </ion-navbar>
-</ion-header>
 
 <ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+  
+  <div align="center"  class="image" >
+      <img src="../../assets/imgs/rugby.png" alt="">
+      <h5 align="center" >Rugby score board</h5>
+
+  </div> 
+
+<div class="content" >
+  <ion-list>
+
+    <ion-item>
+      <ion-input type="text" placeholder="Home Team" [(ngModel)]="Home" ></ion-input>
+    </ion-item>
+    <h1 align="center" >VS</h1>
+  
+    <ion-item>
+      <ion-input type="text" placeholder="Away Team" [(ngModel)]="Away" ></ion-input>
+    </ion-item>
+<br> <br>
+    <div align="center"  >
+        <button ion-button color="button" (click)="GetStarted()" > Get Started </button >
+
+    </div>
+
+    
+  
+  </ion-list>
+
+</div>
+
 </ion-content>
+
