--- a/src/pages/score/score.html
+++ b/src/pages/score/score.html
@@ -4,16 +4,11 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header>
-
-  <ion-navbar>
-    <ion-title>Score Board </ion-title>
-  </ion-navbar>
-
-</ion-header>
 
 
-<ion-content> <br> <br>
+
+<ion-content>
+
     <div align="center"  >
         <img src="../../assets/imgs/rugby.png" alt="" width="100px" >
         <h1 align="center" >Rugby score board</h1>
@@ -29,8 +24,8 @@
                 <h4 style="font-size: 500%"  > {{Home}}</h4>  
              </ion-card >
 
-             <div   *ngFor="let a of ScoreArray"  >
-                <h2>{{a.TeamA}}</h2>
+             <div   >
+                <h2>{{TeamA}}</h2>
                  </div>
             </ion-col>
 
@@ -40,8 +35,8 @@
                     <h4 style="font-size: 500%" > {{Away}}</h4>
                   </ion-card >
 
-                  <div  *ngFor="let a of ScoreArray"   >
-                      <h2> {{a.TeamB}}</h2>
+                  <div  >
+                      <h2> {{TeamB}}</h2>
                   </div>
             </ion-col >           
           </ion-row  >
@@ -65,8 +60,8 @@
             </div> 
 
         <div align="center" >
-            <button ion-button color="button" (click)="Reset()"class="button1"  >Reset </button >
-              <button ion-button color="button" (click)="Reset()" ><ion-icon ios="ios-refresh" md="md-refresh"></ion-icon></button >
+            <button ion-button color="button" (click)="Reset()"class="button2"  >Reset </button >
+
         </div>     
   </div>
    
